# raze-cli

./: .gitignore  Cargo.toml  License.md  README.md
src/: License.md  main.rs
src/formatting/: mod.rs  size_formatter.rs  time_formatter.rs
src/procedures/: authenticate.rs  backup.rs  command_prompt.rs  mod.rs  purge.rs
src/storage/: storage.rs
