[package]
name = "raze-cli"
version = "0.1.1"
authors = ["Kongou <kongou@shipfu.moe>"]

[dependencies]
raze = "0.1.6"
text_io = "*"
time = "0.1.39"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

glob = "0.2.11"
progress = "0.2.0"

scoped-pool = "1.0.0"

[dependencies.sha1]
version = "0.6.0"
features = ["std"]